--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,21 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: local
+    hooks:
+      - id: pytest-tests
+        name: Run Pytest
+        entry: pytest
+        language: system
+        types: [python]
+        pass_filenames: false
+
+  - repo: https://github.com/AliYmn/conventional-commits-check
+    rev: v2.9.0
+    hooks:
+    - id: conventional-commits-check
+      stages: [commit-msg]
+      args: ["--emoji-disabled"]
+
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
     -   id: trailing-whitespace
@@ -7,13 +23,13 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 
--   repo: https://github.com/psf/black
+  - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
     -   id: black
 
 
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: 6.0.1
     hooks:
     -   id: isort
